fix: format keyframe animations for improved readability

--- a/rg_web/src/app/modules/gallery/components/lightbox/lightbox.component.scss
+++ b/rg_web/src/app/modules/gallery/components/lightbox/lightbox.component.scss
@@ -355,22 +355,38 @@
 
 // Fade In
 @keyframes fadeInA {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @keyframes fadeInB {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 // Fade Out
 @keyframes fadeOutA {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 @keyframes fadeOutB {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 @media screen and (max-width: 1024px) {
